--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <div id="back" onclick="hidecontact()" style="visibility: hidden;"></div>
 <div id="contact" style="visibility: hidden; opacity: 0;">
-<a class="close" onclick="hidecontact()"><img src="/assets/img/icons/cruz.png"></a>
+<a class="close" onclick="hidecontact()"><img src="{{ site.baseurl }}/assets/img/icons/cruz.png"></a>
 <b>El vivero</b><br>
 <br>
 T +34 915 328 011<br>
@@ -10,11 +10,11 @@ Calle Pez, 27. Oficina 312<br>28004 Madrid<br><br>
 <div class="social" style="margin-top: 13px;">
 <span id="face">
   <a href="https://www.facebook.com/elviverodesign" target="_blank" class="nohover">
-    <img class="nohover" src="/assets/img/icons/facebook.png" id="face-icon"> like</a>
+    <img class="nohover" src="{{ site.baseurl }}/assets/img/icons/facebook.png" id="face-icon"> like</a>
 </span>
 <span id="issuu">
   <a href="http://issuu.com/elvivero" target="_blank" class="nohover">
-    <img class="nohover" src="/assets/img/icons/issuu.png" id="issuu-icon"> Issuu</a>
+    <img class="nohover" src="{{ site.baseurl }}/assets/img/icons/issuu.png" id="issuu-icon"> Issuu</a>
   </span>
 </div>
 </div>
