--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@ $pageURL = "http://$_SERVER[HTTP_HOST]$_SERVER[REQUEST_URI]";
     {% include menu_select.html %}
 	</section>
 	<section id="gallery-link"><a href="/">Gallery</a></section>
-	<section id="studio-link"><a href="/studio/">Studio</a></section>
+	<section id="studio-link"><a href="{{ site.baseurl }}/studio/">Studio</a></section>
   <section id="contact-link"><a onclick="displaycontact()">Contact</a></section>
   <section id="shop-link"><a href="http://www.buendiashop.com/"target="_blank">Shop</a></section>
 </header>
