--- a/_includes/menu_select.html
+++ b/_includes/menu_select.html
@@ -2,84 +2,84 @@
     <option value="" selected>Projects</option>
     <option disabled>-------------------------------------</option>
     <option disabled>IDENTITY</option>
-    <option value="/projects/architectus-omnibus">Architectus Omnibus?</option>
-    <option value="/projects/mncars-audiovisuales"> Audiovisuales MNCARS</option>
-    <option value="/projects/centro-federico-garcia-lorca">Centro Federico García Lorca</option>
-    <option value="/projects/eclectic">Eclèctic</option>
-    <option value="/projects/extremadura-es-cultura">Extremadura es Cultura</option>
-    <option value="/projects/fecyt-marca">Fecyt</option>
-    <option value="/projects/freshlatino2">Freshlatino 02</option>
-    <option value="/projects/ministerio-sanidad">Min Sanidad y Consumo</option>
-    <option value="/projects/museo-marco">Museo Marco de Vigo</option>
+    <option value="{{ site.baseurl }}/projects/architectus-omnibus">Architectus Omnibus?</option>
+    <option value="{{ site.baseurl }}/projects/mncars-audiovisuales"> Audiovisuales MNCARS</option>
+    <option value="{{ site.baseurl }}/projects/centro-federico-garcia-lorca">Centro Federico García Lorca</option>
+    <option value="{{ site.baseurl }}/projects/eclectic">Eclèctic</option>
+    <option value="{{ site.baseurl }}/projects/extremadura-es-cultura">Extremadura es Cultura</option>
+    <option value="{{ site.baseurl }}/projects/fecyt-marca">Fecyt</option>
+    <option value="{{ site.baseurl }}/projects/freshlatino2">Freshlatino 02</option>
+    <option value="{{ site.baseurl }}/projects/ministerio-sanidad">Min Sanidad y Consumo</option>
+    <option value="{{ site.baseurl }}/projects/museo-marco">Museo Marco de Vigo</option>
 
     <option disabled>-------------------------------------</option>
     <option disabled>COMUNICATION</option>
-    <option value="/projects/7-impertinentes">7 Impertinentes</option>
-    <option value="/projects/claudio-gabis">Claudio Gabis</option>
-    <option value="/projects/dark">Dark. Torraspapel</option>
-    <option value="/projects/bienal-venecia-es">España, Bienal Venecia</option>
-    <option value="/projects/mncars-comunicacion">MNCARS. Museo Reina Sofía</option>
-    <option value="/projects/ps1">The Real Royal Trip PS1</option>
+    <option value="{{ site.baseurl }}/projects/7-impertinentes">7 Impertinentes</option>
+    <option value="{{ site.baseurl }}/projects/claudio-gabis">Claudio Gabis</option>
+    <option value="{{ site.baseurl }}/projects/dark">Dark. Torraspapel</option>
+    <option value="{{ site.baseurl }}/projects/bienal-venecia-es">España, Bienal Venecia</option>
+    <option value="{{ site.baseurl }}/projects/mncars-comunicacion">MNCARS. Museo Reina Sofía</option>
+    <option value="{{ site.baseurl }}/projects/ps1">The Real Royal Trip PS1</option>
 
     <option disabled>-------------------------------------</option>
     <option disabled>BOOKS/CATALOGUES</option>
-    <option value="/projects/acerca">Acerca</option>
-    <option value="/projects/mncars-alia-syed">Alia Syed</option>
-    <option value="/projects/arco">ARCO 25 aniversario</option>
-    <option value="/projects/carcel-de-amor">Cárcel de amor</option>
-    <option value="/projects/mncars-cine-y-casi-cine">Cine y casi cine</option>
-    <option value="/projects/mncars-cine-y-casi-2007">Cine y casi cine 2007</option>
-    <option value="/projects/dario-basso">Dario Basso</option>
-    <option value="/projects/mncars-amor">Describiendo el amor</option>
-    <option value="/projects/de11a21">de 11 a 21 - revista</option>
-    <option value="/projects/fluxus">Fluxus</option>
-    <option value="/projects/gonzalo-puch">Gonzalo Puch</option>
-    <option value="/projects/hfde1">hfde</option>
-    <option value="/projects/hfde2">hfde2</option>
-    <option value="/projects/hito-steyerl">Hito Steyerl. Duty-Free Art</option>
-    <option value="/projects/inventario">Inventario</option>
-    <option value="/projects/jack-smith">Jack Smith</option>
-    <option value="/projects/lax">LAX</option>
-    <option value="/projects/lineas-de-mira">Lineas de mira</option>
-    <option value="/projects/madrid-mirada">Madrid Mirada</option>
-    <option value="/projects/disco-flaming-star-ca2m">Mil Veras</option>
-    <option value="/projects/monocanal">Monocanal</option>
-    <option value="/projects/multitud-singular">Multitud Singular</option>
-    <option value="/projects/outsiders-cuba">Naemi</option>
-    <option value="/projects/pilar-albarracin">Pilar Albarracín</option>
-    <option value="/projects/meiac-marta-de-menezes">Post Local Projects</option>
-    <option value="/projects/present-tense">Present Tense</option>
-    <option value="/projects/primera-generacion">Primera Generación</option>
-    <option value="/projects/rafael-lozano-hemmer">Rafael Lozano-Hemmer</option>
-    <option value="/projects/samuel-beckett">Samuel Beckett</option>
-    <option value="/projects/stan-brakhage">Stan Brakhage</option>
-    <option value="/projects/tempos">Tempo(s)</option>
-    <option value="/projects/ulrike-ottinger">Ulrike Ottinger</option>
-    <option value="/projects/mncars-latinoamerica">Visionarios</option>
+    <option value="{{ site.baseurl }}/projects/acerca">Acerca</option>
+    <option value="{{ site.baseurl }}/projects/mncars-alia-syed">Alia Syed</option>
+    <option value="{{ site.baseurl }}/projects/arco">ARCO 25 aniversario</option>
+    <option value="{{ site.baseurl }}/projects/carcel-de-amor">Cárcel de amor</option>
+    <option value="{{ site.baseurl }}/projects/mncars-cine-y-casi-cine">Cine y casi cine</option>
+    <option value="{{ site.baseurl }}/projects/mncars-cine-y-casi-2007">Cine y casi cine 2007</option>
+    <option value="{{ site.baseurl }}/projects/dario-basso">Dario Basso</option>
+    <option value="{{ site.baseurl }}/projects/mncars-amor">Describiendo el amor</option>
+    <option value="{{ site.baseurl }}/projects/de11a21">de 11 a 21 - revista</option>
+    <option value="{{ site.baseurl }}/projects/fluxus">Fluxus</option>
+    <option value="{{ site.baseurl }}/projects/gonzalo-puch">Gonzalo Puch</option>
+    <option value="{{ site.baseurl }}/projects/hfde1">hfde</option>
+    <option value="{{ site.baseurl }}/projects/hfde2">hfde2</option>
+    <option value="{{ site.baseurl }}/projects/hito-steyerl">Hito Steyerl. Duty-Free Art</option>
+    <option value="{{ site.baseurl }}/projects/inventario">Inventario</option>
+    <option value="{{ site.baseurl }}/projects/jack-smith">Jack Smith</option>
+    <option value="{{ site.baseurl }}/projects/lax">LAX</option>
+    <option value="{{ site.baseurl }}/projects/lineas-de-mira">Lineas de mira</option>
+    <option value="{{ site.baseurl }}/projects/madrid-mirada">Madrid Mirada</option>
+    <option value="{{ site.baseurl }}/projects/disco-flaming-star-ca2m">Mil Veras</option>
+    <option value="{{ site.baseurl }}/projects/monocanal">Monocanal</option>
+    <option value="{{ site.baseurl }}/projects/multitud-singular">Multitud Singular</option>
+    <option value="{{ site.baseurl }}/projects/outsiders-cuba">Naemi</option>
+    <option value="{{ site.baseurl }}/projects/pilar-albarracin">Pilar Albarracín</option>
+    <option value="{{ site.baseurl }}/projects/meiac-marta-de-menezes">Post Local Projects</option>
+    <option value="{{ site.baseurl }}/projects/present-tense">Present Tense</option>
+    <option value="{{ site.baseurl }}/projects/primera-generacion">Primera Generación</option>
+    <option value="{{ site.baseurl }}/projects/rafael-lozano-hemmer">Rafael Lozano-Hemmer</option>
+    <option value="{{ site.baseurl }}/projects/samuel-beckett">Samuel Beckett</option>
+    <option value="{{ site.baseurl }}/projects/stan-brakhage">Stan Brakhage</option>
+    <option value="{{ site.baseurl }}/projects/tempos">Tempo(s)</option>
+    <option value="{{ site.baseurl }}/projects/ulrike-ottinger">Ulrike Ottinger</option>
+    <option value="{{ site.baseurl }}/projects/mncars-latinoamerica">Visionarios</option>
 
     <option disabled>-------------------------------------</option>
     <option disabled>EXHIBITIONS</option>
-    <option value="/projects/extremadura-es-cultura">Extremadura es Cultura</option>
-    <option value="/projects/idealista">Idealista.com</option>
-    <option value="/projects/madritel">Madritel</option>
-    <option value="/projects/museo-marco-stand">Museo Marco</option>
-    <option value="/projects/netescopio">Netescopio</option>
-    <option value="/projects/ono">Ono</option>
-    <option value="/projects/pixelware">PixelWare</option>
-    <option value="/projects/r">R-telefonia/internet/tv</option>
+    <option value="{{ site.baseurl }}/projects/extremadura-es-cultura">Extremadura es Cultura</option>
+    <option value="{{ site.baseurl }}/projects/idealista">Idealista.com</option>
+    <option value="{{ site.baseurl }}/projects/madritel">Madritel</option>
+    <option value="{{ site.baseurl }}/projects/museo-marco-stand">Museo Marco</option>
+    <option value="{{ site.baseurl }}/projects/netescopio">Netescopio</option>
+    <option value="{{ site.baseurl }}/projects/ono">Ono</option>
+    <option value="{{ site.baseurl }}/projects/pixelware">PixelWare</option>
+    <option value="{{ site.baseurl }}/projects/r">R-telefonia/internet/tv</option>
 
     <option disabled>-------------------------------------</option>
     <option disabled>PRODUCTS</option>
-    <option value="/projects/biombo">2 metros. Biombo</option>
-    <option value="/projects/buen-dia">Buen Día</option>
-    <option value="/projects/chachi">Chachi. Juego </option>
-    <option value="/projects/dark">Dark. Torraspapel</option>
-    <option value="/projects/luminaria-basica">Luminaria Básica</option>
-    <option value="/projects/pitch-in">Pitch-in Paper Basket</option>
-    <option value="/projects/trophy">SGAE Trophy</option>
+    <option value="{{ site.baseurl }}/projects/biombo">2 metros. Biombo</option>
+    <option value="{{ site.baseurl }}/projects/buen-dia">Buen Día</option>
+    <option value="{{ site.baseurl }}/projects/chachi">Chachi. Juego </option>
+    <option value="{{ site.baseurl }}/projects/dark">Dark. Torraspapel</option>
+    <option value="{{ site.baseurl }}/projects/luminaria-basica">Luminaria Básica</option>
+    <option value="{{ site.baseurl }}/projects/pitch-in">Pitch-in Paper Basket</option>
+    <option value="{{ site.baseurl }}/projects/trophy">SGAE Trophy</option>
 
     <option disabled>-------------------------------------</option>
     <option disabled>WEB PAGES</option>
-    <option value="/projects/webs">Selected Web Pages</option>
+    <option value="{{ site.baseurl }}/projects/webs">Selected Web Pages</option>
 
 </select>
