--- a/_includes/escaparate.html
+++ b/_includes/escaparate.html
@@ -1,3 +1,3 @@
-<object type="image/svg+xml" height="535px" data="{{ site.baseurl }}/assets/escaparate.svg">
+<object type="image/svg+xml" data="{{ site.baseurl }}/assets/escaparate.svg">
   <param name="src" value="{{ site.baseurl }}/assets/escaparate.svg">
 </object>
