--- a/css/escaparate.scss
+++ b/css/escaparate.scss
@@ -43,8 +43,21 @@ object{
     to {color: white;}
 }
 
-@media screen and (max-height: 650px) {  
-	object{
+
+@media screen and (max-height: 550px) {  
+	object, .content{
 		height: 350px;
+	}
+	object{
+		left: -17px;
+	}
+}
+
+@media screen and (max-height: 650px) and (min-height: 550px) {  
+	object, .content{
+		height: 435px;
+	}
+	object{
+		left: -22px;
 	}
 }
