--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   {% include head.html %}
   <body>
     {% include header.html %}
+    <div id="back" onclick="hidecontact();hideSelector();" style="visibility: hidden;"></div>
+    {% include project-selector.html %}
     {% include contact.html %}
     {{ content }}
   </body>
