--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -140,13 +140,46 @@ header{
 }
 // Description end 
 
+// Project selector
+
+#selector{
+	background: white;
+	position: fixed;
+	top:65px;
+	left: 100px;
+	width: 240px;
+	height: 300px;
+	padding: 15px;
+	overflow-y: scroll;
+	-ms-overflow-style: none;  // IE 10+
+	z-index: 200;
+	border: black solid 1px;
+	font-size: 14px;
+	@include transition(opacity 0.5 ease-in-out);
+	li {
+		list-style: none;
+		margin-bottom: 5px;
+		margin-left: 5px;
+	}
+	li.section {
+		margin-top: 15px;
+		margin-bottom: 10px;
+		margin-left: 0px;
+	}
+	li.section:first-child{
+		margin-top: 0px;
+	}
+	li:last-child{
+		margin-bottom: 15px;
+	}
+}
 
 // Contact window 
 #contact{
 	width: 155px;
 	height: 195px;
 	position: fixed;
-	left: 440px;
+	left: 295px;
 	top: 65px;
 	z-index: 16;
 	margin: auto;
