--- a/_includes/project-selector.html
+++ b/_includes/project-selector.html
@@ -1,6 +1,6 @@
 <ul id="selector" style="visibility: hidden; opacity: 0;">
 
-  <li class="section">IDENTITY</li>
+  <li class="section">Identity</li>
   <li><a href="{{ site.baseurl }}/architectus-omnibus">Architectus Omnibus?</a></li>
   <li><a href="{{ site.baseurl }}/mncars-audiovisuales"> Audiovisuales MNCARS</a></li>
   <li><a href="{{ site.baseurl }}/centro-federico-garcia-lorca">Centro Federico García Lorca</a></li>
@@ -11,7 +11,8 @@
   <li><a href="{{ site.baseurl }}/ministerio-sanidad">Min Sanidad y Consumo</a></li>
   <li><a href="{{ site.baseurl }}/museo-marco">Museo Marco de Vigo</a></li>
 
-  <li class="section">EXHIBITIONS</li>
+  <hr />
+  <li class="section">Exhibitions</li>
   <li><a href="{{ site.baseurl }}/extremadura-es-cultura">Extremadura es Cultura</a></li>
   <li><a href="{{ site.baseurl }}/ideaasta">Ideaasta.com</a></li>
   <li><a href="{{ site.baseurl }}/madritel">Madritel</a></li>
@@ -21,7 +22,8 @@
   <li><a href="{{ site.baseurl }}/pixelware">PixelWare</a></li>
   <li><a href="{{ site.baseurl }}/r">R-telefonia/internet/tv</a></li>
 
-  <li class="section">COMUNICATION</li>
+  <hr />
+  <li class="section">Comunication</li>
   <li><a href="{{ site.baseurl }}/7-impertinentes">7 Impertinentes</a></li>
   <li><a href="{{ site.baseurl }}/claudio-gabis">Claudio Gabis</a></li>
   <li><a href="{{ site.baseurl }}/dark">Dark. Torraspapel</a></li>
@@ -29,7 +31,8 @@
   <li><a href="{{ site.baseurl }}/mncars-comunicacion">MNCARS. Museo Reina Sofía</a></li>
   <li><a href="{{ site.baseurl }}/ps1">The Real Royal Trip PS1</a></li>
 
-  <li class="section">BOOKS/CATALOGUES</li>
+  <hr />
+  <li class="section">Books/Catalogues</li>
   <li><a href="{{ site.baseurl }}/acerca">Acerca</a></li>
   <li><a href="{{ site.baseurl }}/mncars-aaa-syed">Aaa Syed</a></li>
   <li><a href="{{ site.baseurl }}/arco">ARCO 25 aniversario</a></li>
@@ -65,7 +68,8 @@
   <li><a href="{{ site.baseurl }}/mncars-latinoamerica">Visionarios</a></li>
 
 
-  <li class="section">PRODUCTS</li>
+  <hr />
+  <li class="section">Products</li>
   <li><a href="{{ site.baseurl }}/biombo">2 metros. Biombo</a></li>
   <li><a href="{{ site.baseurl }}/buen-dia">Buen Día</a></li>
   <li><a href="{{ site.baseurl }}/chachi">Chachi. Juego </a></li>
@@ -74,7 +78,8 @@
   <li><a href="{{ site.baseurl }}/pitch-in">Pitch-in Paper Basket</a></li>
   <li><a href="{{ site.baseurl }}/trophy">SGAE Trophy</a></li>
 
-  <li class="section">WEB PAGES</li>
+  <hr />
+  <li class="section">Web pages</li>
   <li><a href="{{ site.baseurl }}/webs">Selected Web Pages</a></li>
 
 </ul>
