--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -82,27 +82,24 @@ header{
   img:last-child{
 	  margin-right: 25px !important;
   }
+	
   .fix350{ 
-    height: 350px;
+    height: 350px !important;
+		max-height: 350px !important;
   }
   .fix535{
     height: 535px;
   }
-  .espacio45{
-    margin-right: 45px; 
-  }
-  .espacio35{
-    margin-right: 35px; 
-  }
-  .espacio30{
-    margin-right: 30px; 
-  }
-  .espacio25{
-    margin-right: 25px; 
-  }
-  .espacio15{
-    margin-right: 15px; 
-  }
+	
+  .espacio45{ margin-right: 45px; }
+	.espacio40{ margin-right: 40px; }
+  .espacio35{ margin-right: 35px; }
+  .espacio30{ margin-right: 30px; }
+  .espacio25{ margin-right: 25px; }
+	.espacio20{ margin-right: 20px; }
+  .espacio15{ margin-right: 15px; }
+	.espacio10{ margin-right: 10px; }
+	
   .nohover:hover{
     background: transparent !important;
     color: black !important;
@@ -144,12 +141,14 @@ header{
 
 #selector{
 	background: white;
+	border: 1px solid rgb(170,170,170);
 	position: fixed;
-	top:55px;
+	top:65px;
 	left: 100px;
 	width: 240px;
-	height: 65%;
-	padding: 5px;
+	height: calc(100% - 95px);
+	padding: 10px;
+	padding-top: 15px;
 	overflow-y: scroll;
 	-ms-overflow-style: none;  // IE 10+
 	z-index: 200;
@@ -157,13 +156,15 @@ header{
 	@include transition(opacity 0.5 ease-in-out);
 	li {
 		list-style: none;
-		margin-bottom: 5px;
+		margin-bottom: 7px;
 		margin-left: 0px;
+		font-size: 13px;
 	}
 	li.section {
 		margin-top: 20px;
 		margin-bottom: 10px;
 		margin-left: 0px;
+		font-weight: bold;
 	}
 	li.section:first-child{
 		margin-top: 0px;
@@ -171,8 +172,20 @@ header{
 	li:last-child{
 		margin-bottom: 15px;
 	}
+	
+	hr{
+		border: 0;
+		height: 1px;
+		background: black;
+	}
 }
-
+#selector::-webkit-scrollbar {
+		background: white;
+		width: 8px;
+}
+#selector::-webkit-scrollbar-thumb {
+  background-color: rgb(170,170,170);
+}
 // Contact window 
 #contact{
 	width: 155px;
@@ -183,7 +196,8 @@ header{
 	z-index: 16;
 	margin: auto;
 	padding: 20px;
-	background: rgb(220,220,220);
+	background: white;
+	border: 1px solid rgb(170,170,170);
 	font-size: 13px;
 	line-height: 1.3em;
 	opacity: 0;
