--- a/_sass/post_old.css
+++ b/_sass/post_old.css
@@ -4,7 +4,8 @@
 .content{
 	margin-top: 65px;
 	font-family: arial;
-	height:350px;
+	height: 350px;
+	max-height: 350px;
 	padding: 25px;
 	font-size:14px;
 	padding-bottom: 20px;
