--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@ T +34 915 328 011<br>
 <a href="mailto:info@elvivero.es">e-mail</a><br><br>
 Calle Pez, 27. Oficina 312<br>28004 Madrid<br><br>
 <a href="https://goo.gl/maps/KXOsF" target="_blank">View map &gt;</a><br><br>
-<div class="social" style="margin-top: 13px;">
+<div class="social" >
 <span id="face">
   <a href="https://www.facebook.com/elviverodesign" target="_blank" class="nohover">
     <img class="nohover" src="{{ site.baseurl }}/assets/img/icons/facebook.png" id="face-icon"> like</a>
