--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/escaparate.css">
     {% endif %}{% if page.layout == "post_old" %}
     <link rel="stylesheet" href="{{ site.baseurl }}/css/post_old.css">
+    {% else %}
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/post_new.css">
     {% endif %}
     <script src="{{ site.baseurl }}/assets/jquery-3.2.1.min.js"></script>
     <script src="{{ site.baseurl }}/assets/scripts.js"></script>
