--- a/_layouts/escaparate.html
+++ b/_layouts/escaparate.html
@@ -8,5 +8,5 @@ layout: default
 </div>
 <div id="description" class="description">
   © El vivero <span style="font-size: 12px">2004–{{ site.time | date: '%Y'}}.</span>
-  <span id="tenyears">{{ site.time | date: '%Y' | minus: 2004}} years<em>!</em></span>
+  <span id="tenyears">{{ site.time | date: '%Y' | minus: 2004}} years!</span>
 </div>
