--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -84,8 +84,7 @@ header{
   }
 	
   .fix350{ 
-    height: 350px !important;
-		max-height: 350px !important;
+    height: 350px;
   }
   .fix535{
     height: 535px;
@@ -310,19 +309,3 @@ body::-webkit-scrollbar:hover  {
 
 html.touch .scroll{ display: none;}
 // Scroll end 
-
-
-@media screen and (max-height: 690px) {  
-	.content{
-		height: calc(100vh - 160px) !important;
-		min-height: 350px;
-		iframe {
-			height: calc(100vh - 160px);
-			min-height: 350px;
-		}
-		.fix535, img{
-			height: calc(100vh - 160px);
-			min-height: 350px;
-		}
-	}
-}
