--- a/css/post_new.scss
+++ b/css/post_new.scss
@@ -1,7 +1,9 @@
 ---
 # Front matter comment to ensure Jekyll properly reads file.
 ---
-
+.description{
+	top:620px;
+}
 @media screen and (max-height: 690px) {  
 	.content{
 		height: calc(100vh - 180px) ;
@@ -14,5 +16,13 @@
 			height: calc(100vh - 180px);
 			min-height: 350px;
 		}
+	}
+	.description{
+		top: calc(100vh - 95px);
+	}
+}
+@media screen and (max-height: 530px) {
+	.description{
+		top: 435px;
 	}
 }
