--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
     {% if page.title == "El vivero" %}<title>{{ site.title }}</title>{% else %}<title>{{ site.title }} - {{ page.title }}</title>{% endif %}
-    <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/assets/img/icons/favicon.png"/>
+    <link rel="shortcut icon" id="favicon" type="image/png" href="{{ site.baseurl }}/assets/img/icons/favicon1.png"/>
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/icons/apple-touch-icon.png" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     {% if page.title == "El vivero" %}
