--- a/_includes/project-selector.html
+++ b/_includes/project-selector.html
@@ -34,7 +34,7 @@
   <hr />
   <li class="section">Books/Catalogues</li>
   <li><a href="{{ site.baseurl }}/acerca">Acerca</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-aaa-syed">Aaa Syed</a></li>
+  <li><a href="{{ site.baseurl }}/mncars-alia-syed">Aaa Syed</a></li>
   <li><a href="{{ site.baseurl }}/arco">ARCO 25 aniversario</a></li>
   <li><a href="{{ site.baseurl }}/carcel-de-amor">Cárcel de amor</a></li>
   <li><a href="{{ site.baseurl }}/mncars-cine-y-casi-cine">Cine y casi cine</a></li>
