--- a/_includes/project-selector.html
+++ b/_includes/project-selector.html
@@ -42,6 +42,7 @@
   <li><a href="{{ site.baseurl }}/dario-basso">Dario Basso</a></li>
   <li><a href="{{ site.baseurl }}/mncars-amor">Describiendo el amor</a></li>
   <li><a href="{{ site.baseurl }}/de11a21">de 11 a 21 - revista</a></li>
+  <li><a href="{{ site.baseurl }}/first-generation">First Generation</a></li>
   <li><a href="{{ site.baseurl }}/fluxus">Fluxus</a></li>
   <li><a href="{{ site.baseurl }}/gonzalo-puch">Gonzalo Puch</a></li>
   <li><a href="{{ site.baseurl }}/hfde1">hfde</a></li>
@@ -59,7 +60,6 @@
   <li><a href="{{ site.baseurl }}/pilar-albarracin">Pilar Albarracín</a></li>
   <li><a href="{{ site.baseurl }}/meiac-marta-de-menezes">Post Local Projects</a></li>
   <li><a href="{{ site.baseurl }}/present-tense">Present Tense</a></li>
-  <li><a href="{{ site.baseurl }}/primera-generacion">Primera Generación</a></li>
   <li><a href="{{ site.baseurl }}/rafael-lozano-hemmer">Rafael Lozano-Hemmer</a></li>
   <li><a href="{{ site.baseurl }}/samuel-beckett">Samuel Beckett</a></li>
   <li><a href="{{ site.baseurl }}/stan-brakhage">Stan Brakhage</a></li>
