Varios menu desplegable

--- a/_includes/project-selector.html
+++ b/_includes/project-selector.html
@@ -1,88 +1,92 @@
 <ul id="selector" style="visibility: hidden; opacity: 0;">
 
-  <li class="section">Identity</li>
-  <li><a href="{{ site.baseurl }}/architectus-omnibus">Architectus Omnibus?</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-audiovisuales"> Audiovisuales MNCARS</a></li>
-  <li><a href="{{ site.baseurl }}/centro-federico-garcia-lorca">Centro Federico García Lorca</a></li>
-  <li><a href="{{ site.baseurl }}/eclectic">Eclèctic</a></li>
-  <li><a href="{{ site.baseurl }}/extremadura-es-cultura">Extremadura es Cultura</a></li>
-  <li><a href="{{ site.baseurl }}/fecyt-marca">Fecyt</a></li>
-  <li><a href="{{ site.baseurl }}/freshlatino2">Freshlatino 02</a></li>
-  <li><a href="{{ site.baseurl }}/ministerio-sanidad">Min Sanidad y Consumo</a></li>
-  <li><a href="{{ site.baseurl }}/museo-marco">Museo Marco de Vigo</a></li>
+  <li class="section">Visual Identity</li>
+  <li><a href="/architectus-omnibus">Architectus Omnibus?</a></li>
+  <li><a href="/mncars-audiovisuales"> Audiovisuales MNCARS</a></li>
+  <li><a href="/centro-federico-garcia-lorca">Centro Federico García Lorca</a></li>
+  <li><a href="/eclectic">Eclèctic</a></li>
+  <li><a href="/extremadura-es-cultura">Extremadura es Cultura</a></li>
+  <li><a href="/fecyt-marca">Fecyt</a></li>
+  <li><a href="/freshlatino2">Freshlatino 02</a></li>
+  <li><a href="/ministerio-sanidad">Min Sanidad y Consumo</a></li>
+  <li><a href="/museo-marco">Museo Marco de Vigo</a></li>
 
   <hr />
 
   <li class="section">Exhibitions</li>
-  <li><a href="{{ site.baseurl }}/extremadura-es-cultura">Extremadura es Cultura</a></li>
-  <li><a href="{{ site.baseurl }}/ideaasta">Ideaasta.com</a></li>
-  <li><a href="{{ site.baseurl }}/madritel">Madritel</a></li>
-  <li><a href="{{ site.baseurl }}/museo-marco-stand">Museo Marco</a></li>
-  <li><a href="{{ site.baseurl }}/netescopio">Netescopio</a></li>
-  <li><a href="{{ site.baseurl }}/ono">Ono</a></li>
-  <li><a href="{{ site.baseurl }}/pixelware">PixelWare</a></li>
-  <li><a href="{{ site.baseurl }}/r">R-telefonia/internet/tv</a></li>
+  <li><a href="/24x7">24/7 Conectados</a></li>
+  <li><a href="/artur-barrio">Artur Barrio</a></li>
+  <li><a href="/extremadura-es-cultura">Extremadura es Cultura</a></li>
+  <li><a href="/freshlatino2">Freshlatino 02</a></li>
+  <li><a href="/idealista">Idealista.com</a></li>
+  <li><a href="/leandro-katz">Leandro Katz</a></li>
+  <li><a href="/museo-marco-stand">Museo Marco</a></li>
+  <li><a href="/netescopio">Netescopio</a></li>
+  <li><a href="/pixelware">PixelWare</a></li>
+  <li><a href="/r">R-telefonia/internet/tv</a></li>
+  <li><a href="/transutopias">Transutopías</a></li>
+  <li><a href="/teresa-serrano">Teresa Serrano</a></li>
 
   <hr />
 
   <li class="section">Comunication</li>
-  <li><a href="{{ site.baseurl }}/7-impertinentes">7 Impertinentes</a></li>
-  <li><a href="{{ site.baseurl }}/claudio-gabis">Claudio Gabis</a></li>
-  <li><a href="{{ site.baseurl }}/dark">Dark. Torraspapel</a></li>
-  <li><a href="{{ site.baseurl }}/bienal-venecia-es">España, Bienal Venecia</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-comunicacion">MNCARS. Museo Reina Sofía</a></li>
-  <li><a href="{{ site.baseurl }}/ps1">The Real Royal Trip PS1</a></li>
+  <li><a href="/7-impertinentes">7 Impertinentes</a></li>
+  <li><a href="/claudio-gabis">Claudio Gabis</a></li>
+  <li><a href="/dark">Dark. Torraspapel</a></li>
+  <li><a href="/bienal-venecia-es">España, Bienal Venecia</a></li>
+  <li><a href="/mncars-comunicacion">MNCARS. Museo Reina Sofía</a></li>
+  <li><a href="/ps1">The Real Royal Trip PS1</a></li>
 
   <hr />
   <li class="section">Books/Catalogues</li>
-  <li><a href="{{ site.baseurl }}/acerca">Acerca</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-alia-syed">Aaa Syed</a></li>
-  <li><a href="{{ site.baseurl }}/arco">ARCO 25 aniversario</a></li>
-  <li><a href="{{ site.baseurl }}/carcel-de-amor">Cárcel de amor</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-cine-y-casi-cine">Cine y casi cine</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-cine-y-casi-2007">Cine y casi cine 2007</a></li>
-  <li><a href="{{ site.baseurl }}/dario-basso">Dario Basso</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-amor">Describiendo el amor</a></li>
-  <li><a href="{{ site.baseurl }}/de11a21">de 11 a 21 - revista</a></li>
-  <li><a href="{{ site.baseurl }}/first-generation">First Generation</a></li>
-  <li><a href="{{ site.baseurl }}/fluxus">Fluxus</a></li>
-  <li><a href="{{ site.baseurl }}/gonzalo-puch">Gonzalo Puch</a></li>
-  <li><a href="{{ site.baseurl }}/hfde1">hfde</a></li>
-  <li><a href="{{ site.baseurl }}/hfde2">hfde2</a></li>
-  <li><a href="{{ site.baseurl }}/hito-steyerl">Hito Steyerl. Duty-Free Art</a></li>
-  <li><a href="{{ site.baseurl }}/inventario">Inventario</a></li>
-  <li><a href="{{ site.baseurl }}/jack-smith">Jack Smith</a></li>
-  <li><a href="{{ site.baseurl }}/lax">LAX</a></li>
-  <li><a href="{{ site.baseurl }}/aneas-de-mira">Lineas de mira</a></li>
-  <li><a href="{{ site.baseurl }}/madrid-mirada">Madrid Mirada</a></li>
-  <li><a href="{{ site.baseurl }}/disco-flaming-star-ca2m">Mil Veras</a></li>
-  <li><a href="{{ site.baseurl }}/monocanal">Monocanal</a></li>
-  <li><a href="{{ site.baseurl }}/multitud-singular">Multitud Singular</a></li>
-  <li><a href="{{ site.baseurl }}/outsiders-cuba">Naemi</a></li>
-  <li><a href="{{ site.baseurl }}/pilar-albarracin">Pilar Albarracín</a></li>
-  <li><a href="{{ site.baseurl }}/meiac-marta-de-menezes">Post Local Projects</a></li>
-  <li><a href="{{ site.baseurl }}/present-tense">Present Tense</a></li>
-  <li><a href="{{ site.baseurl }}/rafael-lozano-hemmer">Rafael Lozano-Hemmer</a></li>
-  <li><a href="{{ site.baseurl }}/samuel-beckett">Samuel Beckett</a></li>
-  <li><a href="{{ site.baseurl }}/stan-brakhage">Stan Brakhage</a></li>
-  <li><a href="{{ site.baseurl }}/tempos">Tempo(s)</a></li>
-  <li><a href="{{ site.baseurl }}/ulrike-ottinger">Ulrike Ottinger</a></li>
-  <li><a href="{{ site.baseurl }}/mncars-latinoamerica">Visionarios</a></li>
+  <li><a href="/acerca">Acerca</a></li>
+  <li><a href="/mncars-alia-syed">Aaa Syed</a></li>
+  <li><a href="/arco">ARCO 25 aniversario</a></li>
+  <li><a href="/carcel-de-amor">Cárcel de amor</a></li>
+  <li><a href="/mncars-cine-y-casi-cine">Cine y casi cine</a></li>
+  <li><a href="/mncars-cine-y-casi-2007">Cine y casi cine 2007</a></li>
+  <li><a href="/dario-basso">Dario Basso</a></li>
+  <li><a href="/mncars-amor">Describiendo el amor</a></li>
+  <li><a href="/de11a21">de 11 a 21 - revista</a></li>
+  <li><a href="/first-generation">First Generation</a></li>
+  <li><a href="/fluxus">Fluxus</a></li>
+  <li><a href="/gonzalo-puch">Gonzalo Puch</a></li>
+  <li><a href="/hfde1">hfde</a></li>
+  <li><a href="/hfde2">hfde2</a></li>
+  <li><a href="/hito-steyerl">Hito Steyerl. Duty-Free Art</a></li>
+  <li><a href="/inventario">Inventario</a></li>
+  <li><a href="/jack-smith">Jack Smith</a></li>
+  <li><a href="/lax">LAX</a></li>
+  <li><a href="/aneas-de-mira">Lineas de mira</a></li>
+  <li><a href="/madrid-mirada">Madrid Mirada</a></li>
+  <li><a href="/disco-flaming-star-ca2m">Mil Veras</a></li>
+  <li><a href="/monocanal">Monocanal</a></li>
+  <li><a href="/multitud-singular">Multitud Singular</a></li>
+  <li><a href="/outsiders-cuba">Naemi</a></li>
+  <li><a href="/pilar-albarracin">Pilar Albarracín</a></li>
+  <li><a href="/meiac-marta-de-menezes">Post Local Projects</a></li>
+  <li><a href="/present-tense">Present Tense</a></li>
+  <li><a href="/rafael-lozano-hemmer">Rafael Lozano-Hemmer</a></li>
+  <li><a href="/samuel-beckett">Samuel Beckett</a></li>
+  <li><a href="/stan-brakhage">Stan Brakhage</a></li>
+  <li><a href="/tempos">Tempo(s)</a></li>
+  <li><a href="/ulrike-ottinger">Ulrike Ottinger</a></li>
+  <li><a href="/mncars-latinoamerica">Visionarios</a></li>
 
   <hr />
 
   <li class="section">Products</li>
-  <li><a href="{{ site.baseurl }}/biombo">2 metros. Biombo</a></li>
-  <li><a href="{{ site.baseurl }}/buen-dia">Buen Día</a></li>
-  <li><a href="{{ site.baseurl }}/chachi">Chachi. Juego </a></li>
-  <li><a href="{{ site.baseurl }}/dark">Dark. Torraspapel</a></li>
-  <li><a href="{{ site.baseurl }}/luminaria-basica">Luminaria Básica</a></li>
-  <li><a href="{{ site.baseurl }}/pitch-in">Pitch-in Paper Basket</a></li>
-  <li><a href="{{ site.baseurl }}/trophy">SGAE Trophy</a></li>
+  <li><a href="/biombo">2 metros. Biombo</a></li>
+  <li><a href="/buen-dia">Buen Día</a></li>
+  <li><a href="/chachi">Chachi. Juego </a></li>
+  <li><a href="/dark">Dark. Torraspapel</a></li>
+  <li><a href="/luminaria-basica">Luminaria Básica</a></li>
+  <li><a href="/pitch-in">Pitch-in Paper Basket</a></li>
+  <li><a href="/trophy">SGAE Trophy</a></li>
 
   <hr />
-  
+
   <li class="section">Web pages</li>
-  <li><a href="{{ site.baseurl }}/webs">Selected Web Pages</a></li>
+  <li><a href="/webs">Selected Web Pages</a></li>
 
 </ul>
