--- a/_includes/project-selector.html
+++ b/_includes/project-selector.html
@@ -6,7 +6,7 @@
   <li><a href="/centro-federico-garcia-lorca">Centro Federico García Lorca</a></li>
   <li><a href="/eclectic">Eclèctic</a></li>
   <li><a href="/extremadura-es-cultura">Extremadura es Cultura</a></li>
-  <li><a href="/fecyt-marca">Fecyt</a></li>
+  <li><a href="/fecyt-identity">Fecyt</a></li>
   <li><a href="/freshlatino2">Freshlatino 02</a></li>
   <li><a href="/ministerio-sanidad">Min Sanidad y Consumo</a></li>
   <li><a href="/museo-marco">Museo Marco de Vigo</a></li>
@@ -29,57 +29,67 @@
 
   <hr />
 
-  <li class="section">Comunication</li>
+  <li class="section">Communication</li>
   <li><a href="/7-impertinentes">7 Impertinentes</a></li>
   <li><a href="/claudio-gabis">Claudio Gabis</a></li>
-  <li><a href="/dark">Dark. Torraspapel</a></li>
-  <li><a href="/bienal-venecia-es">España, Bienal Venecia</a></li>
-  <li><a href="/mncars-comunicacion">MNCARS. Museo Reina Sofía</a></li>
+  <li><a href="/dark">Dark</a></li>
+  <li><a href="/bienal-venecia-es">Spain at Venice Biennale</a></li>
+  <li><a href="/mncars-comunicacion">Museo Reina Sofía</a></li>
   <li><a href="/ps1">The Real Royal Trip PS1</a></li>
 
   <hr />
   <li class="section">Books/Catalogues</li>
+  <li><a href="/mncars-alia-syed">Alia Syed</a></li>
   <li><a href="/acerca">Acerca</a></li>
   <li><a href="/mncars-alia-syed">Aaa Syed</a></li>
   <li><a href="/arco">ARCO 25 aniversario</a></li>
+  <li><a href="/biaci-1">Biaci #1</a></li>
+  <li><a href="/zulma-recchini">Biografías</a></li>
   <li><a href="/carcel-de-amor">Cárcel de amor</a></li>
   <li><a href="/mncars-cine-y-casi-cine">Cine y casi cine</a></li>
   <li><a href="/mncars-cine-y-casi-2007">Cine y casi cine 2007</a></li>
   <li><a href="/dario-basso">Dario Basso</a></li>
   <li><a href="/mncars-amor">Describiendo el amor</a></li>
-  <li><a href="/de11a21">de 11 a 21 - revista</a></li>
+  <li><a href="/de11a21">de 11 a 21 magazine</a></li>
   <li><a href="/first-generation">First Generation</a></li>
   <li><a href="/fluxus">Fluxus</a></li>
   <li><a href="/gonzalo-puch">Gonzalo Puch</a></li>
   <li><a href="/hfde1">hfde</a></li>
   <li><a href="/hfde2">hfde2</a></li>
-  <li><a href="/hito-steyerl">Hito Steyerl. Duty-Free Art</a></li>
+  <li><a href="/hito-steyerl">Hito Steyerl</a></li>
   <li><a href="/inventario">Inventario</a></li>
   <li><a href="/jack-smith">Jack Smith</a></li>
   <li><a href="/lax">LAX</a></li>
-  <li><a href="/aneas-de-mira">Lineas de mira</a></li>
+  <li><a href="/leandro-katz">Leandro Katz</a></li>
+  <li><a href="/lineas-de-mira">Líneas de mira</a></li>
   <li><a href="/madrid-mirada">Madrid Mirada</a></li>
   <li><a href="/disco-flaming-star-ca2m">Mil Veras</a></li>
   <li><a href="/monocanal">Monocanal</a></li>
   <li><a href="/multitud-singular">Multitud Singular</a></li>
   <li><a href="/outsiders-cuba">Naemi</a></li>
+  <li><a href="/mncars-no-performances">No lo llames performance</a></li>
   <li><a href="/pilar-albarracin">Pilar Albarracín</a></li>
   <li><a href="/meiac-marta-de-menezes">Post Local Projects</a></li>
   <li><a href="/present-tense">Present Tense</a></li>
   <li><a href="/rafael-lozano-hemmer">Rafael Lozano-Hemmer</a></li>
   <li><a href="/samuel-beckett">Samuel Beckett</a></li>
   <li><a href="/stan-brakhage">Stan Brakhage</a></li>
+  <li><a href="/teresa-serrano">Teresa Serrano</a></li>
+  <li><a href="/thomas-florschuetz">Thomas Florschuetz</a></li>
+  <li><a href="/andres-jaque">Transmaterial Politics</a></li>
   <li><a href="/tempos">Tempo(s)</a></li>
   <li><a href="/ulrike-ottinger">Ulrike Ottinger</a></li>
+  <li><a href="/ana-luiza-martins-costa">Uma retirada insólita</a></li>
   <li><a href="/mncars-latinoamerica">Visionarios</a></li>
 
   <hr />
 
   <li class="section">Products</li>
-  <li><a href="/biombo">2 metros. Biombo</a></li>
+  <li><a href="/mucho-gusto-madrid">Banco para Madrid</a></li>
+  <li><a href="/biombo">Biombo. 2 metros</a></li>
   <li><a href="/buen-dia">Buen Día</a></li>
   <li><a href="/chachi">Chachi. Juego </a></li>
-  <li><a href="/dark">Dark. Torraspapel</a></li>
+  <li><a href="/dark">Dark</a></li>
   <li><a href="/luminaria-basica">Luminaria Básica</a></li>
   <li><a href="/pitch-in">Pitch-in Paper Basket</a></li>
   <li><a href="/trophy">SGAE Trophy</a></li>
