--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <div id="back" onclick="hidecontact();hideSelector();" style="visibility: hidden;"></div>
     {% include project-selector.html %}
     {% include contact.html %}
+    {% include arrows.html %}
     {{ content }}
   </body>
 </html>
