--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,12 +8,10 @@ Calle Pez, 27. Oficina 312<br>28004 Madrid<br><br>
 <a href="https://goo.gl/maps/KXOsF" target="_blank">View map &gt;</a><br><br>
 <div class="social" >
 <span id="face">
-  <a href="https://www.facebook.com/elviverodesign" target="_blank" class="nohover">
-    <img class="nohover" src="{{ site.baseurl }}/assets/img/icons/facebook.png" id="face-icon"> like</a>
+  <a href="https://www.instagram.com/elviverodesign" target="_blank" class="nohover">instagram</a>
 </span>
 <span id="issuu">
-  <a href="http://issuu.com/elvivero" target="_blank" class="nohover">
-    <img class="nohover" src="{{ site.baseurl }}/assets/img/icons/issuu.png" id="issuu-icon"> Issuu</a>
+  <a href="http://issuu.com/elvivero" target="_blank" class="nohover">Issuu</a>
   </span>
 </div>
 </div>
