arrows fix + analytics

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -63,6 +63,12 @@ header{
 	padding-left: 0px;
 	font-size:15px;
 }
+
+#project-link a:hover{
+	color: #ffffff;
+	background: #000000;
+}
+
 // Menu end
 
 // Content
