--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" id="favicon" type="image/png" href="{{ site.baseurl }}/assets/img/icons/favicon1.png"/>
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/icons/apple-touch-icon.png" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/OverlayScrollbars.css">
     {% if page.title == "El vivero" %}
     <link rel="stylesheet" href="{{ site.baseurl }}/css/escaparate.css">
     {% endif %}{% if page.layout == "post_old" %}
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/css/post_new.css">
     {% endif %}
     <script src="{{ site.baseurl }}/assets/jquery-3.2.1.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/jquery.overlayScrollbars.min.js"></script>
     <script src="{{ site.baseurl }}/assets/scripts.js"></script>
     {% if page.style %}
     <style type="text/css">
