Arrows responsive and some bug fixing

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<div id="contact" style="visibility: hidden; opacity: 0;">
+<div id="contact" >
 <a class="close" onclick="hidecontact()"><img src="{{ site.baseurl }}/assets/img/icons/cruz.png"></a>
 <b>El vivero</b><br>
 <br>
