--- a/_includes/project-selector.html
+++ b/_includes/project-selector.html
@@ -1,4 +1,4 @@
-<ul id="selector" style="visibility: hidden; opacity: 0;">
+<ul id="selector">
 
   <li class="section">Visual Identity</li>
   <li><a href="/architectus-omnibus">Architectus Omnibus?</a></li>
