--- a/_layouts/empty.html
+++ b/_layouts/empty.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta name="robots" content="noindex,nofollow">
+<meta name="googlebot" content="noindex">
 {% include head.html %}
 <body>
 {{ content }}
