--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,6 @@
     {% include contact.html %}
     {% include arrows.html %}
     {{ content }}
+    {% include scrollbar.html %}
   </body>
 </html>
