--- a/_layouts/escaparate.html
+++ b/_layouts/escaparate.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% assign month = site.time | date: '%m' %}{% if month == "12" %}{% assign year = site.time | date: '%Y' | plus: 1 %}{% else %}{% assign year = site.time | date: '%Y' %}{% endif %}
 <div id="content" class="content">
-{% include escaparate.html %}
+{% include escaparate.svg %}
 <div id="leftscroll" class="scroll" onclick='hidecontact()'></div>
 <div id="rightscroll" class="scroll" onclick='hidecontact()'></div>
 </div>
