Done! todo: resize shit

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
     <script src="{{ site.baseurl }}/assets/jquery-3.2.1.min.js"></script>
     <script src="{{ site.baseurl }}/assets/jquery.overlayScrollbars.min.js"></script>
     <script src="{{ site.baseurl }}/assets/scripts.js"></script>
+    {% if page.title == "El vivero" %}<script src="{{ site.baseurl }}/assets/escaparate.js"></script>{% endif %}
     {% if page.style %}
     <style type="text/css">
      {{ page.style }}
